@@ -1,5 +1,11 @@
 2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build install] Installed punified Scheme, sans ".scm" extension.
+
+	* autogen.sh: Import Guile-BAUX module ‘punify’.
+
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[uninstall] Fix bug: Make sure everything is properly deleted.
 
 	* autogen.sh: Import uninstall-sofixed.
